Fix for windows maven build